--- a/style/style.css
+++ b/style/style.css
@@ -236,10 +236,10 @@ a:active
 {
 	position: absolute;
 	top: 2%;
-	left: 15%;
+	left: 5%;
 	right: 5%;
-	/*width: 90%;*/
-	height: 45%;
+	width: 500px;
+	/*height: 45%;*/
 	border: 2px solid black;
 }
 #like
@@ -250,13 +250,18 @@ a:active
 	width: 50px;
 	z-index: 5;
 }
-.liked
+#nb_like
 {
 	position: absolute;
-	top: 1.5%;
-	left: 15%;
-	width: 50px;
+	top: 45%;
+	right: 0%;
+	width: 25px;
+	height: 30px;
 	z-index: 5;
+	color: black;
+	background-color: blue;
+	border: 1px solid blue;
+	border-radius: 5px;
 }
 #comment
 {
