--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ a:link
 }
 a:visited
 {
-	color:grey;
+	color:white;
 }
 a:hover
 {
@@ -231,6 +231,7 @@ a:active
 	left: 1%;
 	right: 31%;
 	border: 2px solid green;
+	overflow: auto;
 }
 #imgApe
 {
@@ -239,7 +240,6 @@ a:active
 	left: 5%;
 	right: 5%;
 	width: 500px;
-	/*height: 45%;*/
 	border: 2px solid black;
 }
 #like
@@ -268,7 +268,10 @@ a:active
 	border: 2px solid black;
 	position: absolute;
 	bottom: 0%;
-	width: 100%;
+	left: 0%;
+	right: 0%;
+	text-overflow: auto;
+	/*width: 100%;*/
 	height: 45%;
 }
 #form_log
@@ -276,8 +279,6 @@ a:active
 	position: initial;
 	padding-left: 40vw;
 	padding-top: 20vh;
-/*	left: 25%;
-	top: 20%;*/
 	text-align: left;
 	width: 20vw;
 }
