--- a/style/style.css
+++ b/style/style.css
@@ -59,7 +59,6 @@ a:active
 	top: 5%;
 	bottom: 5%;
 	right: 0%;
-	/*height: 90%;*/
 	border: 2px solid blue;
 	overflow-y: none;
 }
@@ -132,8 +131,6 @@ a:active
 	z-index: 3;
 	width: 40vw;
 	height: 30vw;
-	/*border: 2px solid black;*/
-	/*display: block;*/
 }
 #onVid
 {
@@ -141,7 +138,6 @@ a:active
 	top: 1vw;
 	left: 3.5vw;
 	z-index: 4;
-	/*border: 2px dotted blue;*/
 }
 #underVid
 {
@@ -151,7 +147,6 @@ a:active
 	width: 40vw;
 	height: 30vw;
 	z-index: 4;
-	/*border: 2px dotted blue;*/
 }
 #canvas
 {
@@ -196,7 +191,6 @@ a:active
 .imgdone
 {
 	width: 100%;
-	/*height: 15vw;*/
 }
 #miniGal
 {
@@ -231,34 +225,30 @@ a:active
 	left: 1%;
 	right: 31%;
 	border: 2px solid green;
-	overflow: auto;
+	overflow: none;
 }
 #imgApe
 {
 	position: absolute;
 	top: 2%;
-	left: 5%;
-	right: 5%;
+	left: calc((100% - 500px) / 2);
 	width: 500px;
-	border: 2px solid black;
 }
 #like
 {
 	position: absolute;
-	top: 47%;
-	right: 5%;
+	bottom: 45%;
+	right: 3%;
 	width: 50px;
 	z-index: 5;
 }
 #nb_like
 {
 	position: absolute;
-	top: 45%;
+	bottom: 45%;
 	right: 0%;
-	width: 25px;
-	height: 30px;
 	z-index: 5;
-	color: black;
+	color: white;
 	background-color: blue;
 	border: 1px solid blue;
 	border-radius: 5px;
@@ -267,12 +257,24 @@ a:active
 {
 	border: 2px solid black;
 	position: absolute;
-	bottom: 0%;
+	bottom: 6%;
 	left: 0%;
 	right: 0%;
-	text-overflow: auto;
-	/*width: 100%;*/
-	height: 45%;
+	overflow: auto;
+	height: 39%;
+}
+#tocomment
+{
+	border: 2px solid black;
+	position: absolute;
+	z-index: 2;
+	bottom: -1.5%;
+	left: 25%;
+	right: 25%;
+	width: 50%;
+	height: 6%;
+	text-align: center;
+	overflow: none;
 }
 #form_log
 {
